--- a/week3/main.css
+++ b/week3/main.css
@@ -11,6 +11,12 @@ body {
     overflow: hidden;
 }
 
+.logo {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 24px;
+    padding: 0px 10px 5px 10px;
+}
+
 header #branding i {
     display: none;
     font-size: 28px;
